[metadata]
url = https://github.com/nipreps/nirodents
author = The NiPreps Developers
author_email = nipreps@gmail.com
maintainer = Eilidh MacNicol
maintainer_email = nipreps@gmail.com
description = NeuroImaging Rodents (NiRodents) provides processing tools for magnetic resonance images of the rodent brain.
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >= 3.6
install_requires =
    attrs
    nibabel >= 3.0.1
    nipype ~= 1.5.1
    niworkflows >= 1.3.2
    templateflow ~= 0.7.1
    svgutils == 0.3.1

test_requires =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28, <2.0
packages = find:

[options.entry_points]
console_scripts =
    artsBrainExtraction=nirodents.cli.brainextraction:main
    plot_mask=nirodents.cli.plotmask:main

[options.package_data]
nirodents =
    data/*.json

[options.packages.find]
exclude =
    *.tests

[options.extras_require]
doc =
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit =
    duecredit
style =
    flake8 >= 3.7.0
test =
    coverage < 5
    pytest >= 4.4
    pytest-cov
    pytest-xdist >= 1.28
tests =
    %(test)s
all =
    %(doc)s
    %(duecredit)s
    %(style)s
    %(test)s

[versioneer]
VCS = git
style = pep440
versionfile_source = nirodents/_version.py
versionfile_build = nirodents/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
ignore =
    W503
    E203
exclude=*build/
